@@ -93,6 +93,7 @@ Current:
       - bug #38951: AVR109 use byte offset instead of word offset
       - patch #7769: Write flash fails for AVR910 programmers
       - bug #38732: Support for ATtiny1634
+      - bug #36901 flashing Atmega32U4 EEPROM produces garbage on chip
 
   * Keep track of input file contents
 
